add font family

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,5 @@
-.container-card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    gap: 30px;
+h1 {
+    padding-left: 20px;
+    margin-bottom: 10px;
+    font-family: Londrina Sketch;
 }
