--- a/src/components/card/Card.module.scss
+++ b/src/components/card/Card.module.scss
@@ -12,8 +12,17 @@ img {
     border-radius: 5%;
     width: 300px;
     height: 350px;
+    box-shadow: 13px 8px 8px 0px rgba(34, 60, 80, 0.2);
+    border: 10px inset lightblue;
+    transition: transform 0.3s;
 
     h2{
         user-select: none;    
+        font-family: Sriracha;
     }   
 }
+
+.container:hover {
+    transform: scale(1.05);
+}
+ 
